adding verify designs
